# fast-lapjv

./: .bazelproject  .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  requirements.txt  results.json
src/: BUILD  lap.cpp  lap.h  matrix.cpp  matrix.h
test/: BUILD  compare_benchmarks.py  lapbench.cpp  laptest.cpp  vis_benchmark.py
